Problems tab display, refs #1553

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -643,11 +643,13 @@ folder_create.recycle_error.text=Unable to create recycle bin for folder {0}
 folder_create.dialog.select_file.text=Select file
 folder_create.progress.text=Creating PowerFolder '{0}'
 
+folder_problem.unsynchronized=Folder {0} has not been synchronized in {1} day(s). 
+
+
 uicontroller.empty_folder.title=All files deleted
 uicontroller.empty_folder.message=All files in folder {0} have been deleted.\n\nWhat would you like to do?
 uicontroller.empty_folder.stop_managing=Stop managing locally
 uicontroller.empty_folder.send_deletions=Broadcast file deletions
-uicontroller.unsynchronized_folder.single=Folder {0} has not been synchronized in {1} day(s). 
 
 folder_exception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
 folder_exception.dialog.title=Problem with PowerFolder '{0}'
