Work on Problems tab, refs #1553

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -91,6 +91,10 @@ action_configure_transfer_mode.description=Configure this transfer mode
 action_configure_transfer_mode.key=C
 action_configure_transfer_mode.name=Configure
 
+action_clear_problem.description=Clear problem(s) from list
+action_clear_problem.key=C
+action_clear_problem.name=Cleanup
+
 action_find_computers.description=Search for other computers
 action_find_computers.key=F
 action_find_computers.name=Find Computers
@@ -127,6 +131,10 @@ action_open_explorer.description=Open this folder in your operating system's fil
 action_open_explorer.key=O
 action_open_explorer.name=Open Folder
 
+action_open_problem.description=Open this problem in your browser
+action_open_problem.key=O
+action_open_problem.name=Open
+
 action_most_recent_changes.description=Show most recent changes
 action_most_recent_changes.key=R
 action_most_recent_changes.name=Recent Changes
@@ -147,7 +155,7 @@ action_open_downloads_information.description=Show details of recent file downlo
 action_open_downloads_information.key=D
 action_open_downloads_information.name=Downloads
 
-action_open_file.description=Open file
+action_open_file.description=Open file in operating system
 action_open_file.key=O
 action_open_file.name=Open
 
