--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -7,6 +7,7 @@ action_add_directory.icon=icons/Add.png
 action_backup_online_storage.icon=icons/OnlineFolder.png
 action_clear_completed_downloads.icon=icons/Clear.gif
 action_clear_completed_uploads.icon=icons/Clear.gif
+action_clear_problem.icon=icons/Clear.gif
 action_configure_transfer_mode.icon=icons/Edit.png
 action_connect.icon=icons/ConnectBright.png
 action_delete_file.icon=icons/Delete.gif
@@ -27,6 +28,7 @@ action_open_about_box.icon=icons/information.png
 action_open_chat.icon=icons/Chat.gif
 action_open_debug_information.icon=icons/Bug.png
 action_open_file.icon=icons/Open.gif
+action_open_problem.icon=icons/Open.gif
 action_open_files_information.icon=icons/Files.png
 action_open_members_information.icon=icons/NodeFriendConnected.gif
 action_open_preferences.icon=icons/Preferences.png
