--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -652,7 +652,9 @@ folder_create.dialog.select_file.text=Select file
 folder_create.progress.text=Creating PowerFolder '{0}'
 
 folder_problem.unsynchronized=Folder {0} has not been synchronized in {1} day(s). 
-
+folder_problem.table_model.date=Date
+folder_problem.table_model.description=Description
+folder_problem.table_model.wiki=Wiki
 
 uicontroller.empty_folder.title=All files deleted
 uicontroller.empty_folder.message=All files in folder {0} have been deleted.\n\nWhat would you like to do?
