Separators in transfer editor, fixes #1471

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -365,6 +365,15 @@ config.loader.dialog.info=Please enter the web address of your storage provider:
 config.loader.dialog.exit=Exit
 config.loader.dialog.skip=Skip
 
+####################
+# Tips of the Day #
+####################
+
+tip_of_the_day.length=3
+tip_of_the_day.text_1=Demo Tip of the Day 1
+tip_of_the_day.text_2=Demo Tip of the Day 2
+tip_of_the_day.text_3=Demo Tip of the Day 3
+
 ###################
 # Everything Else #
 ###################
@@ -457,12 +466,13 @@ dialog.bind_error=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
-dialog.create_edit_profile.auto_download_from_friends=Autodownload from friends
-dialog.create_edit_profile.auto_download_from_other=Autodownload from others
+dialog.create_edit_profile.auto_download=Autodownload
 dialog.create_edit_profile.cannot_save_name=This transfer mode cannot be saved because\nthere is already a transfer mode named {0}
 dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be saved because\nit is identical to transfer mode {0}
 dialog.create_edit_profile.change_detection_manual=Manual
 dialog.create_edit_profile.configure_from=Configure from an existing transfer mode
+dialog.create_edit_profile.synchronization=Synchronization
+dialog.create_edit_profile.change_detection=Change Detection
 dialog.create_edit_profile.daily_sync=Daily synchronization
 dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
 dialog.create_edit_profile.every_day=Every day
@@ -471,8 +481,7 @@ dialog.create_edit_profile.profile_name=Mode name
 dialog.create_edit_profile.periodic_sync=Periodic synchronization
 dialog.create_edit_profile.suggestNameTemplate0={0} (copy)
 dialog.create_edit_profile.suggestNameTemplateN={0} (copy {1})
-dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with friends
-dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
+dialog.create_edit_profile.sync_deletion=Synchronize deletion
 dialog.create_edit_profile.time_between_scans=(Maximum) time until change detection
 dialog.create_edit_profile.title_create=Create custom transfer mode
 dialog.single_file_accept.title=Single file accept
@@ -1153,11 +1162,6 @@ systray.tooltip.in_sync=in sync
 systray.tooltip.syncing=syncing
 systray.tooltip.up.mb=Up {0} MBs
 systray.tooltip.up=Up {0} KBs
-
-tip_of_the_day.length=3
-tip_of_the_day.text_1=Demo Tip of the Day 1
-tip_of_the_day.text_2=Demo Tip of the Day 2
-tip_of_the_day.text_3=Demo Tip of the Day 3
 
 transfer.problem.broken.download=The transfer download was broken
 transfer.problem.broken.upload=The transfer upload was broken
