Invitation text area, refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1288,8 +1288,7 @@ wizard.select_online_storage.title=Select Online Storage folders
 wizard.select_online_storage.info=Please select Online Storage folders to join locally
 wizard.select_online_storage.recycle_bin.text=Use recycle bin
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
-wizard.send_invitations.invitation_text=Enter a message for the receiver
-wizard.send_invitations.invitation_text_sample=
+wizard.send_invitations.invitation_text=Enter a message for the receiver (optional)
 wizard.send_invitations.join=Invitation files are required to join a folder.
 wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
 wizard.send_invitations.over_powerfolder=Send via PowerFolder now
