--- a/src/test-resources/ControllerBartUI.config
+++ b/src/test-resources/ControllerBartUI.config
@@ -13,3 +13,7 @@ uploadlimit=0
 disablebroadcasts=true
 networkingmode=LANONLYMODE
 mydyndns=localhost
+uploads.auto.cleanup=false
+uploads.auto.cleanup.frequency=0
+downloads.auto.cleanup=false
+downloads.auto.cleanup.frequency=0
