--- a/src/test-resources/ControllerHomer.config
+++ b/src/test-resources/ControllerHomer.config
@@ -16,4 +16,7 @@ disablebroadcasts=true
 networkingmode=LANONLYMODE
 mydyndns=localhost
 auto.connect=false
+uploads.auto.cleanup=false
+uploads.auto.cleanup.frequency=0
 downloads.auto.cleanup=false
+downloads.auto.cleanup.frequency=0
