--- a/src/test-resources/ControllerLisa.config
+++ b/src/test-resources/ControllerLisa.config
@@ -15,4 +15,7 @@ disablebroadcasts=true
 disablercon=true
 networkingmode=LANONLYMODE
 auto.connect=false
+uploads.auto.cleanup=false
+uploads.auto.cleanup.frequency=0
 downloads.auto.cleanup=false
+downloads.auto.cleanup.frequency=0
