Begin rework of invite wizard, refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -39,6 +39,10 @@ action_add_ignore.description=Add a pattern to the ignore list
 action_add_ignore.key=A
 action_add_ignore.name=Add
 
+action_add_invitee.description=Add invitee
+action_add_invitee.key=A
+action_add_invitee.name=Add
+
 action_ask_for_friendship.description=Ask for friendship
 action_ask_for_friendship.key=A
 action_ask_for_friendship.name=Ask
@@ -187,6 +191,10 @@ action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=R
 action_reconnect.name=Reconnect
 
+action_remove_invitee.description=Remove invitee
+action_remove_invitee.key=R
+action_remove_invitee.name=Remove
+
 action_remove_directory.description=Remove directory
 action_remove_directory.key=R
 action_remove_directory.name=Remove
@@ -210,6 +218,10 @@ action_skip_login.name=No thanks, I don't want to use the Online Storage
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
+
+action_search_invitee.description=Search for invitees
+action_search_invitee.key=S
+action_search_invitee.name=Search
 
 action_single_file_transfer_offer.description=Single file transfer offer
 action_single_file_transfer_offer.key=O
@@ -781,7 +793,6 @@ general.save.key=S
 general.save=Save
 general.search=Search
 general.seconds=Second(s)
-general.server=Server
 general.server_only=Server only
 general.size=Size
 general.sunday=Sunday
@@ -1092,7 +1103,6 @@ send_invitation.ask_emailaddres.title=Email address
 send_invitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 send_invitation.example_email_address=Enter email of recipient
 send_invitation.placetostore=Choose a place to store invitation
-send_invitation.select_computer.text=Select computer
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
 settings_tab.add_a_pattern.example=example/*.jpg
@@ -1288,17 +1298,14 @@ wizard.select_online_storage.title=Select Online Storage folders
 wizard.select_online_storage.info=Please select Online Storage folders to join locally
 wizard.select_online_storage.recycle_bin.text=Use recycle bin
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
+wizard.send_invitations.invitation_hint1=Enter a computer name or email adress, and add to list
+wizard.send_invitations.invitation_hint2=or search for computers to invite 
 wizard.send_invitations.invitation_text=Enter a message for the receiver (optional)
-wizard.send_invitations.join=Invitation files are required to join a folder.
-wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
-wizard.send_invitations.over_powerfolder=Send via PowerFolder now
-wizard.send_invitations.save_to_file=Save as file
-wizard.send_invitations.send_by_mail.cc_me=Send to my email address
-wizard.send_invitations.send_by_mail=Send by mail
+wizard.send_invitations.join=Invitations are required to join a folder.
+wizard.send_invitations.never_untrusted=Never give out invitations to untrusted people.
 wizard.send_invitations.title=Send invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
-wizard.send_invitations.select=Save Invitation
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details to login
