--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -2,6 +2,7 @@
 
 action_abort_download.icon=icons/Abort.gif
 action_add_friend.icon=icons/AddFriend.gif
+action_add_invitee.icon=icons/AddFriend.gif
 action_add_ignore.icon=icons/Add.png
 action_add_directory.icon=icons/Add.png
 action_backup_online_storage.icon=icons/OnlineFolder.png
@@ -39,13 +40,21 @@ action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
 action_remove_directory.icon=icons/Delete.gif
 action_remove_ignore.icon=icons/Delete.gif
+action_remove_invitee.icon=icons/Delete.gif
 action_restore_file.icon=icons/Restore.gif
+action_search_invitee.icon=icons/FindComputers.gif
 action_single_file_transfer.icon=icons/ArrowRight.gif
 action_single_file_transfer_accept.icon=icons/Checked.gif
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
 action_pause_sync.icon=icons/Suspend.gif
+
+# Pro related Icons
+activation_picto.icon=icons/pictos/Activation.png
+buy_now_picto.icon=icons/pictos/BuyNow.png
+buy_now_expired_picto.icon=icons/pictos/BuyNowExpired.png
+buy_now_trial_picto.icon=icons/pictos/BuyNowTrial.png
 
 # general icons
 
@@ -215,9 +224,3 @@ web_service.icon=icons/WebService.png
 web_service_picto.icon=icons/pictos/WebService.png
 web_service_quick_info.icon=icons/pictos/WebServiceQuickInfo.png
 white_list.icon=icons/WhiteList.gif
-
-# Pro related Icons
-activation_picto.icon=icons/pictos/Activation.png
-buy_now_picto.icon=icons/pictos/BuyNow.png
-buy_now_expired_picto.icon=icons/pictos/BuyNowExpired.png
-buy_now_trial_picto.icon=icons/pictos/BuyNowTrial.png
