--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -115,6 +115,10 @@ action_hide_offline.description=Offline computers will be filtered from this sea
 action_hide_offline.key=H
 action_hide_offline.name=Hide offline computers
 
+action_invite_advanced.description=Show advanced options
+action_invite_advanced.key=A
+action_invite_advanced.name=Advanced
+
 action_invite_friend.description=Invite a friend to join this folder
 action_invite_friend.key=I
 action_invite_friend.name=Invite
