Begin advanced invite panel, refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1307,9 +1307,10 @@ wizard.send_invitations.invitation_hint2=or search for computers to invite
 wizard.send_invitations.invitation_text=Enter a message for the receiver (optional)
 wizard.send_invitations.join=Invitations are required to join a folder.
 wizard.send_invitations.never_untrusted=Never give out invitations to untrusted people.
-wizard.send_invitations.title=Send invitation
+wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
+wizard.send_invitations_advanced.title=Send Invitation Advanced
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details to login
