Advanced invite panel, refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1109,6 +1109,10 @@ send_invitation.example_email_address=Enter email of recipient
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
+send_invitations_advanced.save_as_file=Save invitation to file
+send_invitations_advanced.location_tip=Select invitation directory
+send_invitations_advanced.clear_tip=Clear directory
+
 settings_tab.add_a_pattern.example=example/*.jpg
 settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
 settings_tab.add_a_pattern.title=Add ignore pattern
@@ -1310,7 +1314,7 @@ wizard.send_invitations.never_untrusted=Never give out invitations to untrusted 
 wizard.send_invitations.title=Send Invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
-wizard.send_invitations_advanced.title=Send Invitation Advanced
+wizard.send_invitations_advanced.title=Send Invitation - Advanced
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details to login
