--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1110,6 +1110,7 @@ send_invitation.placetostore=Choose a place to store invitation
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
 send_invitations_advanced.save_as_file=Save invitation to file
+send_invitations_advanced.select_hint=Select invitation directory
 send_invitations_advanced.location_tip=Select invitation directory
 send_invitations_advanced.clear_tip=Clear directory
 
