--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1109,14 +1109,13 @@ send_invitation.example_email_address=Enter email of recipient
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
-send_invitations_advanced.save_as_file=Save invitation to file
-send_invitations_advanced.select_hint=Select invitation directory
+send_invitations_advanced.select_hint=Select directory for {0}
 send_invitations_advanced.location_tip=Select invitation directory
 send_invitations_advanced.clear_tip=Clear directory
 
 settings_tab.add_a_pattern.example=example/*.jpg
 settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
-settings_tab.add_a_pattern.title=Add ignore pattern
+settings_tab.add_a_pattern.title=Add hignore pattern
 settings_tab.add_patterns.text_1=The following ignore patterns will be added
 settings_tab.add_patterns.title=Add ignore patterns
 settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
