Begin permissions, refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -488,7 +488,7 @@ dialog.create_edit_profile.cannot_save_profile=This transfer mode cannot be save
 dialog.create_edit_profile.change_detection_manual=Manual
 dialog.create_edit_profile.configure_from=Configure from an existing transfer mode
 dialog.create_edit_profile.synchronization=Synchronization
-dialog.create_edit_profile.change_detection=Change Detection
+dialog.create_edit_profile.change_detection=Change detection
 dialog.create_edit_profile.daily_sync=Daily synchronization
 dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
 dialog.create_edit_profile.every_day=Every day
@@ -852,6 +852,11 @@ invitation.utils.unable.write.text=Error while writing invitation, please try ag
 invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
 
+invitation.read_write_permission=Read/Write
+invitation.read_permission=Read
+invitation.admin_permission=Admin
+invitation.unknown_permission=Unknown ({0})
+
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limited_connection.title=Limited connectivity
@@ -1109,9 +1114,13 @@ send_invitation.example_email_address=Enter email of recipient
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
-send_invitations_advanced.select_hint=Select directory for {0}
+send_invitations_advanced.file_label=Save to file
+send_invitations_advanced.filename=Filename
+send_invitations_advanced.file_hint=Directory
 send_invitations_advanced.location_tip=Select invitation directory
 send_invitations_advanced.clear_tip=Clear directory
+send_invitations_advanced.permissions_label=Folder permissions
+send_invitations_advanced.permissions_hint=Permissions
 
 settings_tab.add_a_pattern.example=example/*.jpg
 settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
