Move folder permittion types from Invitation to FolderPermission. refs #1565

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -852,10 +852,10 @@ invitation.utils.unable.write.text=Error while writing invitation, please try ag
 invitation.utils.unable.write.title=Unable to write invitation
 invitation_files.description=PowerFolder invitations
 
-invitation.read_write_permission=Read/Write
-invitation.read_permission=Read
-invitation.admin_permission=Admin
-invitation.unknown_permission=Unknown ({0})
+permissions.read_write=Read/Write
+permissions.read=Read
+permissions.admin=Admin
+permissions.unknown=Unknown ({0})
 
 limited_connection.dont_autodetect=No longer detect limited connectivity
 limited_connection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
