--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1367,3 +1367,8 @@ wizard.what_to_do.title=What do you want to do?
 
 wizard.multi_online_storage_setup.local_folder_location=Local folder location
 wizard.multi_online_storage_setup.select_directory=Select directory
+
+
+settings_tab.archive_mode=Backup local file versions
+archive.no_backup=No Backup
+archive.full_backup=Backup before download
