UI warnings for mass deletions, refs #1022

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -681,10 +681,10 @@ folder_problem.table_model.date=Date
 folder_problem.table_model.description=Description
 folder_problem.table_model.wiki_link=Wiki Link
 
-uicontroller.empty_folder.title=All files deleted
-uicontroller.empty_folder.message=All files in folder {0} have been deleted.\n\nWhat would you like to do?
-uicontroller.empty_folder.stop_managing=Stop managing locally
-uicontroller.empty_folder.send_deletions=Broadcast file deletions
+uicontroller.local_mass_delete.title=All files deleted
+uicontroller.local_amss_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
+uicontroller.remote_mass_delete.warning_title=Mass deletion detected
+uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
 folder_exception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
 folder_exception.dialog.title=Problem with PowerFolder '{0}'
@@ -913,8 +913,6 @@ member.me=Me
 member.non_mutual_friend=None mutual friend
 member.onlan=On LAN
 member.supernode=Supernode
-member.mass_delete.warning_title=Mass deletion detected
-member.mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
 mp3_file_info.album=Album
 mp3_file_info.artist=Artist
