Own connection quality, refs #1202

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -71,6 +71,9 @@ checked.icon=icons/Checked.gif
 computer.icon=icons/Computer.png
 connected_bright.icon=icons/ConnectBright.png
 connected_not.icon=icons/ConnectNot.png
+connection_good.icon=icons/ConnectionGood.png
+connection_medium.icon=icons/ConnectionMedium.png
+connection_poor.icon=icons/ConnectionPoor.png
 delete.icon=icons/Delete.gif
 dialog.icon=icons/Dialog.gif
 directory.icon=icons/Directory.gif
