--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -449,6 +449,10 @@ computers_tab.online_friends_online_lan=Online friends / online LAN
 connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
 
+connection_quality_good.text=Good connection quality
+connection_quality_medium.text=Medium connection quality
+connection_quality_poor.text=Poor connection quality
+
 date_format.detailed_time=[HH\:mm\:ss\:SSS]
 date_format.file_date=MM/dd/yyyy HH\:mm
 date_format.file_date_hours=HH\:mm
