Nicer invite icon

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -20,7 +20,7 @@ action_edit_ignore.icon=icons/Edit.png
 action_find_computers.icon=icons/FindComputers.gif
 action_folder_problem.icon=icons/Warning.png
 action_help.icon=icons/Question.gif
-action_invite_friend.icon=icons/Invite.gif
+action_invite_friend.icon=icons/Invite.png
 action_join_online_storage.icon=icons/LocalAndOnlineFolder.png
 action_new_folder.icon=icons/NewFolder.png
 action_online_storage.icon=icons/OnlineFolder.png
