--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -727,7 +727,7 @@ folder_remove.dialog.title=Remove PowerFolder {0}?
 folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\n\n\n{0}
 folder_repository.warn_on_close_eta.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\nETA: {1}
 folder_repository.warn_on_close.title=Synchronizing
-folder_repository.continue_exit=Continue Exit
+folder_repository.continue_exit=Exit anyways
 
 folderinfo.total_sync=Total sync
 
