Connection quality warning, fixes #1202

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -985,6 +985,7 @@ preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder progr
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
+preferences.dialog.dialogs.warn_on_poor_connection_quality=Warn if connection quality is poor
 preferences.dialog.dialogs.notification_translucency=Translucency
 preferences.dialog.dialogs.notification_delay=Delay (seconds)
 preferences.dialog.dialogs.preview=Preview
@@ -1168,6 +1169,8 @@ status_bar.status_change.disabled=PowerFolder is disabled
 status_bar.status_change.title=Connection Status
 status_bar.sleep.tips=Disable folder change scanning
 status_bar.no_sleep.tips=Enable folder change scanning
+status_bar.poor_quality_warning.title=Poor connection quality
+status_bar.poor_quality_warning.text=*** TOT, What do we want to say here? ***
 
 synchronisation.notice.title=Activated transfer mode {0}
 synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
