Problem descriptions and wiki links class, refs #1578

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -608,7 +608,6 @@ file_details_panel.expected=Expected
 file_details_panel.name=Name
 file_details_panel.modified_date=Modified on
 
-file_info.in_recycle_bin=In Recycle Bin
 file_info.name=Name
 file_info.deleted=Deleted
 file_info.downloading_from_member=Downloading from {0}
@@ -622,7 +621,6 @@ files_table_model.name=Name
 files_table_model.size=Size
 files_table_model.modified_by=Modified by
 files_table_model.date=Date
-files_table_model.availability=Availability
 
 file_list.name=Name
 
@@ -634,18 +632,11 @@ filename_problem.dialog.exclude_from_sync=Exclude from sync
 filename_problem.dialog.solution=Solution
 filename_problem.dialog.sync_anyways=Try to sync anyways
 filename_problem.dialog.title=Filename problem(s) detected
-filename_problem.duplicate.description=A filename with the same name is found but it has a different case\:\n{0}\nthis causes problems on windows computers
 filename_problem.duplicate=Duplicate filename found (with different case)
-filename_problem.ends_with_illegal_char.description=The filename ends with characters that may cause problems on Windows computers.\nThe characters . and space ( ) are not allowed as last characters on those computers
 filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
 filename_problem.not_recommended_chars=The filename contains characters that are not recommended
-filename_problem.not_recommended_chars_linux.description=The filename contains characters that may cause problems on Unix/Linux computers.\nThe character / is not allowed on those computers
-filename_problem.not_recommended_chars_mac_osx.description=The filename contains characters that may cause problems on Mac OSX computers.\nThe characters / and \: are not allowed on those computers
-filename_problem.not_recommended_chars_windows.description=The filename contains characters that may cause problems on Windows computers.\nThe characters |\\?*<"\:>/  and "control" characters (ASCII code 0 till 31)\nare not allowed on those computers
-filename_problem.reserved_filename.description=The filename is a reserved filename on Windows,\nit is recommended not to use this names on windows\:\n CON, PRN, AUX, CLOCK$, NUL COM0, COM1, COM2, COM3,\nCOM4, COM5, COM6, COM7, COM8, COM9, LPT0, LPT1,\nLPT2, LPT3, LPT4, LPT5, LPT6, LPT7, LPT8, and LPT9
 filename_problem.reserved_filename=The filename is a reserved filename on Windows
-filename_problem.to_long.description=The filename is longer than 255 characters,\nthis in know to cause problems on Windows, Mac OSX and Unix/Linux computers
-filename_problem.to_long=The filename is to long
+filename_problem.too_long=The filename is too long
 
 files_stats_panel.local_label=Local: {0}
 files_stats_panel.incoming_label=Incoming: {0}
