Problem table additions, refs #1578

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -675,6 +675,9 @@ folder_problem.unsynchronized=Folder {0} has not been synchronized in {1} day(s)
 folder_problem.table_model.date=Date
 folder_problem.table_model.description=Description
 folder_problem.table_model.wiki_link=Wiki Link
+folder_problem.table_model.solution=Solution
+folder_problem.table_model.not_available=Not available
+
 
 uicontroller.local_mass_delete.title=All files deleted
 uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
