Solvable problem additions, refs #1578

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -150,6 +150,7 @@ question.icon=icons/Question.gif
 recycle_bin_picto.icon=icons/pictos/RecycleBin.png
 settings.icon=icons/Settings.png
 sleep.icon=icons/Sleep.png
+solve.icon=advanced.icon=icons/Advanced.png
 sort_blank.icon=icons/SortBlank.gif
 sort_down.icon=icons/SortDown.gif
 sort_up.icon=icons/SortUp.gif
