Solvable problem descriptions

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -634,9 +634,13 @@ filename_problem.dialog.sync_anyways=Try to sync anyways
 filename_problem.dialog.title=Filename problem(s) detected
 filename_problem.duplicate=Duplicate filename found (with different case)
 filename_problem.ends_with_illegal_char=The filename ends with characters that are not recommended
+filename_problem.ends_with_illegal_char.soln_desc=Rename the file
 filename_problem.not_recommended_chars=The filename contains characters that are not recommended
+filename_problem.not_recommended_chars.soln_desc=Rename the file
 filename_problem.reserved_filename=The filename is a reserved filename on Windows
+filename_problem.reserved_filename.soln_desc=Rename the file
 filename_problem.too_long=The filename is too long
+filename_problem.too_long.soln_desc=Rename the file
 
 files_stats_panel.local_label=Local: {0}
 files_stats_panel.incoming_label=Incoming: {0}
