Solve button set, refs #1578

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -235,6 +235,10 @@ action_single_file_transfer_accept.description=Single file transfer accept
 action_single_file_transfer_accept.key=A
 action_single_file_transfer_accept.name=Accept
 
+action_solve_problem.description=Solve problem(s)
+action_solve_problem.key=S
+action_solve_problem.name=Solve
+
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
 action_preview_folder.name=Preview
