--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -46,6 +46,7 @@ action_search_invitee.icon=icons/FindComputers.gif
 action_single_file_transfer.icon=icons/ArrowRight.gif
 action_single_file_transfer_accept.icon=icons/Checked.gif
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
+action_solve_problem.icon=icons/Advanced.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
 action_pause_sync.icon=icons/Suspend.gif
@@ -150,7 +151,6 @@ question.icon=icons/Question.gif
 recycle_bin_picto.icon=icons/pictos/RecycleBin.png
 settings.icon=icons/Settings.png
 sleep.icon=icons/Sleep.png
-solve.icon=advanced.icon=icons/Advanced.png
 sort_blank.icon=icons/SortBlank.gif
 sort_down.icon=icons/SortDown.gif
 sort_up.icon=icons/SortUp.gif
