Rename from solve (like maths) to resolve (fix problem), refs #1578

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -235,9 +235,9 @@ action_single_file_transfer_accept.description=Single file transfer accept
 action_single_file_transfer_accept.key=A
 action_single_file_transfer_accept.name=Accept
 
-action_solve_problem.description=Solve problem(s)
-action_solve_problem.key=S
-action_solve_problem.name=Solve
+action_resolve_problem.description=Resolve problem(s)
+action_resolve_problem.key=R
+action_resolve_problem.name=Resolve
 
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
