--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -46,7 +46,7 @@ action_search_invitee.icon=icons/FindComputers.gif
 action_single_file_transfer.icon=icons/ArrowRight.gif
 action_single_file_transfer_accept.icon=icons/Checked.gif
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
-action_solve_problem.icon=icons/Advanced.png
+action_resolve_problem.icon=icons/Advanced.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
 action_pause_sync.icon=icons/Suspend.gif
