automatically make invitors friends, fixes #1596

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1292,7 +1292,7 @@ wizard.create_folder.title=Creating Folder(s)
 wizard.create_folder.working=Creating folder(s), please wait.
 wizard.finish.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
 wizard.finish.os_login_title=Online Storage Login Successful
-wizard.folder_invitation.intro=You have received an invitation from {0}
+wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
 wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
