refs #198 and #388 and #1579
FileArchiver supports limited number of versions + tests
FileRequester refactored a little + initial support for conflict "Problem"
etc.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1379,3 +1379,4 @@ wizard.multi_online_storage_setup.select_directory=Select directory
 settings_tab.archive_mode=Backup local file versions
 archive.no_backup=No Backup
 archive.full_backup=Backup before download
+folder_problem.noconflictdetection=File {0} from {1} might have a version conflict, but uses an old client without conflict resolution support.   
