--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -883,18 +883,18 @@ line_speed.lan10=LAN 10mbit/s
 line_speed.unlimited=Unlimited
 line_speed.upload_speed=Upload limit
 
-look_and_feel.black_moon=Black Moon
-look_and_feel.black_star=Black Star
-look_and_feel.blue_ice=Blue Ice
-look_and_feel.blue_moon=Blue Moon
-look_and_feel.blue_steel=Blue Steel
-look_and_feel.green_dream=Green Dream
-look_and_feel.mauve_metallic=Mauve Metallic
-look_and_feel.orange_metallic=Orange Metallic
-look_and_feel.silver_moon=Silver Moon
-look_and_feel.sky_metallic=Sky Metallic
-look_and_feel.standard=Standard
-look_and_feel.white_vision=White Vision
+skin.black_moon=Black Moon
+skin.black_star=Black Star
+skin.blue_ice=Blue Ice
+skin.blue_moon=Blue Moon
+skin.blue_steel=Blue Steel
+skin.green_dream=Green Dream
+skin.mauve_metallic=Mauve Metallic
+skin.orange_metallic=Orange Metallic
+skin.silver_moon=Silver Moon
+skin.sky_metallic=Sky Metallic
+skin.standard=Standard
+skin.white_vision=White Vision
 
 low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
@@ -976,7 +976,6 @@ preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bind=Interface address
 preferences.dialog.bindDescr=Interface description
-preferences.dialog.color_theme=Color theme
 preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.delete_empty_dirs=Delete empty directories
 preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
