--- a/build.xml
+++ b/build.xml
@@ -66,6 +66,17 @@ For creation of the installer:
         <property name="applet.dir" location="src/applet" />
         <property name="demo.src.dir" location="src/demo" />
 		<property name="src.test.dir" location="src/test" />
+        <property name="skins.blackmoon.src.dir" location="src/skins/blackmoon" />
+        <property name="skins.blackstar.src.dir" location="src/skins/blackstar" />
+        <property name="skins.blueice.src.dir" location="src/skins/blueice" />
+        <property name="skins.bluemoon.src.dir" location="src/skins/bluemoon" />
+        <property name="skins.bluesteel.src.dir" location="src/skins/bluesteel" />
+        <property name="skins.greendream.src.dir" location="src/skins/greendream" />
+        <property name="skins.mauvemetallic.src.dir" location="src/skins/mauvemetallic" />
+        <property name="skins.orangemetallic.src.dir" location="src/skins/orangemetallic" />
+        <property name="skins.silvermoon.src.dir" location="src/skins/silvermoon" />
+        <property name="skins.skymetallic.src.dir" location="src/skins/skymetallic" />
+        <property name="skins.whitevision.src.dir" location="src/skins/whitevision" />
 
 		<!-- External Libraries -->
 		<fileset id="libs" dir="lib" casesensitive="yes">
@@ -144,6 +155,17 @@ For creation of the installer:
 
 			<src path="${main.src.dir}" />
 			<src path="${jwf.src.dir}" />
+            <src path="${skins.blackmoon.src.dir}" />
+            <src path="${skins.blackstar.src.dir}" />
+            <src path="${skins.blueice.src.dir}" />
+            <src path="${skins.bluemoon.src.dir}" />
+            <src path="${skins.bluesteel.src.dir}" />
+            <src path="${skins.greendream.src.dir}" />
+            <src path="${skins.mauvemetallic.src.dir}" />
+            <src path="${skins.orangemetallic.src.dir}" />
+            <src path="${skins.silvermoon.src.dir}" />
+            <src path="${skins.skymetallic.src.dir}" />
+            <src path="${skins.whitevision.src.dir}" />
 		</javac>
 
 		<!-- copy files from etc to include in jar -->
