--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,17 @@
 	<classpathentry kind="src" path="src/jwf"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/main"/>
+	<classpathentry kind="src" path="src/skins/blackmoon"/>
+	<classpathentry kind="src" path="src/skins/blackstar"/>
+	<classpathentry kind="src" path="src/skins/blueice"/>
+	<classpathentry kind="src" path="src/skins/bluemoon"/>
+	<classpathentry kind="src" path="src/skins/bluesteel"/>
+	<classpathentry kind="src" path="src/skins/greendream"/>
+	<classpathentry kind="src" path="src/skins/mauvemetallic"/>
+	<classpathentry kind="src" path="src/skins/orangemetallic"/>
+	<classpathentry kind="src" path="src/skins/silvermoon"/>
+	<classpathentry kind="src" path="src/skins/skymetallic"/>
+	<classpathentry kind="src" path="src/skins/whitevision"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-io-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/uif_lite-2.0.4.jar"/>
