--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -65,11 +65,11 @@ action_delete_transfer_mode.name=Delete
 
 action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.key=B
-action_backup_online_storage.name=Backup
+action_backup_online_storage.name=Online Storage Backup
 
 action_stop_online_storage.description=Stop backing up this folder to Online Storage
 action_stop_online_storage.key=S
-action_stop_online_storage.name=Stop
+action_stop_online_storage.name=Stop Backing up
 
 action_delete_file.description=Delete file
 action_delete_file.key=D
@@ -77,7 +77,7 @@ action_delete_file.name=Delete
 
 action_delete_folder.description=Delete this folder
 action_delete_folder.key=D
-action_delete_folder.name=Delete
+action_delete_folder.name=Delete Folder
 
 action_details.description=Display the details panel
 action_details.key=D
@@ -241,7 +241,7 @@ action_resolve_problem.name=Resolve
 
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
-action_preview_folder.name=Preview
+action_preview_folder.name=Folder Preview
 
 action_single_file_transfer.description=Transfer file to other computer
 action_single_file_transfer.key=T
