--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -689,6 +689,8 @@ folder_problem.table_model.not_available=Not available
 
 uicontroller.local_mass_delete.title=All files deleted
 uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
+uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
+uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
 uicontroller.remote_mass_delete.warning_title=Mass deletion detected
 uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
