--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -11,7 +11,7 @@ port=3457
 verbose=true
 disableui=true
 uploadlimit=0
-disablercon=true
+disablercon=false
 disablebroadcasts=true
 networkingmode=LANONLYMODE
 mydyndns=localhost
