--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1152,6 +1152,8 @@ settings_tab.move_error.temp=Could not create temporary folder
 settings_tab.move_error.title=Error moving folder contents
 settings_tab.online_storage=Online storage
 settings_tab.select_directory.text=Select folder location
+settings_tab.subdir.title=Subdirectory
+settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
 settings_tab.use_recycle_bin=Use recycle bin
 settings_tab.working.description=The folder is being moved
 settings_tab.working.title=Moving folder
