file filter popup, refs #1316

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -91,6 +91,7 @@ filter_text_field_clear_button_hover.icon=icons/FilterTextFieldClearButtonHover.
 filter_text_field_clear_button_normal.icon=icons/FilterTextFieldClearButtonNormal.png
 filter_text_field_clear_button_push.icon=icons/FilterTextFieldClearButtonPush.png
 filter_text_field_glass.icon=icons/FilterTextFieldGlass.png
+filter_text_field_glass_arrow.icon=icons/FilterTextFieldGlassArrow.png
 folder.icon=icons/Folder.png
 folder_picto.icon=icons/pictos/Folder.png
 folder_sync_0.icon=icons/FolderSync_0.gif
