--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -449,6 +449,7 @@ computers_tab.computer_type_list.text=Select computer types to display
 computers_tab.all_friends_online_lan=All friends / online LAN
 computers_tab.online_friends=Online friends
 computers_tab.online_friends_online_lan=Online friends / online LAN
+computers_tab.no_computers_available=No computers available
 
 connect.dialog.text=Please enter the hostname or IP of the computer you want to connect.\n\nPowerFolder automatically connects to the network after a short time;\nuse this option if you want to manually connect to a computer.\n
 connect.dialog.title=Manually connect to a PowerFolder computer
@@ -662,8 +663,8 @@ files_tab.filter_by_file_name.tool_tip=Filter results by file name
 files_tab.flat_view.text=Flat view
 files_tab.flat_view.tip=Flatten view of folder directory structure
 
-folders_tab.no_folders_available=No folders available
-computers_tab.no_computers_available=No computers available
+filter_text_field.glass.hint=Select filter mode
+
 files_table_panel.no_files_available=No files available
 
 find_computers_dialog.title=Find computers
@@ -759,6 +760,8 @@ friend_search.node_table.ip=IP
 friend_search.node_table.last_seen_online=Last seen online
 friend_search.node_table.name=Name
 friend_search.node_table.on_local_network=On LAN
+
+folders_tab.no_folders_available=No folders available
 
 friends_panel.connected=Connected
 friends_panel.currently_online=Currently online
