--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -663,7 +663,7 @@ files_tab.filter_by_file_name.tool_tip=Filter results by file name
 files_tab.flat_view.text=Flat view
 files_tab.flat_view.tip=Flatten view of folder directory structure
 
-filter_text_field.clear.hint=Clear file filtering
+filter_text_field.clear.hint=Clear filtering
 filter_text_field.glass.hint=Select filter mode
 
 files_table_panel.no_files_available=No files available
