filter mode VM, refs #1316

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -659,13 +659,14 @@ files_tab.combo.local_files_only=Local files only
 files_tab.combo.new_files_only=New files only
 files_tab.combo.tool_tip=Select files to display
 files_tab.filter_by_file_name.hint=Filter by file name
-files_tab.filter_by_file_name.tool_tip=Filter results by file name
 files_tab.flat_view.text=Flat view
 files_tab.flat_view.tip=Flatten view of folder directory structure
 
 filter_text_field.clear.hint=Clear filtering
 filter_text_field.glass.hint=Select filter mode
-
+filter_text_field.menu.file_name.text=Filter by file name
+filter_text_field.menu.modifier.text=Filter by modifier
+filter_text_field.tip=Filter results
 files_table_panel.no_files_available=No files available
 
 find_computers_dialog.title=Find computers
