pref entry for file filter select mode, refs #1316

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -664,7 +664,8 @@ files_tab.flat_view.tip=Flatten view of folder directory structure
 
 filter_text_field.clear.hint=Clear filtering
 filter_text_field.glass.hint=Select filter mode
-filter_text_field.menu.file_name.text=Filter by file name
+filter_text_field.menu.file_name_only.text=Filter by file name
+filter_text_field.menu.file_name_directory_name.text=Filter by file or directory
 filter_text_field.menu.modifier.text=Filter by modifier
 filter_text_field.tip=Filter results
 files_table_panel.no_files_available=No files available
