Prevent local base equaling folder base, fixes #1617

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -992,6 +992,8 @@ preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
+preferences.dialog.duplicate_localbase.title=Directory in use
+preferences.dialog.duplicate_localbase.message=This directory cannot be selected because\nit is the local folder location for folder {0}  
 preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a transfer mode for multiple folders
 preferences.dialog.dialogs.warn_on_poor_connection_quality=Warn if connection quality is poor
@@ -1160,6 +1162,8 @@ settings_tab.online_storage=Online storage
 settings_tab.select_directory.text=Select folder location
 settings_tab.subdir.title=Subdirectory
 settings_tab.subdir.text=It is not possible to move a folder to one of its subdirectories.
+settings_tab.basedir.title=Base directory
+settings_tab.basedir.text=It is not possible to move a folder to the PowerFolder base directory.
 settings_tab.use_recycle_bin=Use recycle bin
 settings_tab.working.description=The folder is being moved
 settings_tab.working.title=Moving folder
