--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1288,6 +1288,8 @@ wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.send_invitation=Send invitation
 wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.title=Select Directory
+wizard.choose_disk_location.local_base.title=Base directory
+wizard.choose_disk_location.local_base.text=It is not possible to move a folder to the PowerFolder base directory.
 wizard.choose_multi_disk_location.select=Please select required directories
 wizard.choose_multi_disk_location.select_additional=Please select additional directories
 wizard.choose_multi_disk_location.title=Select Directories
