Delegate chat handling to chat frame and create tab / change tab icon when message received, refs #278

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -64,6 +64,7 @@ black_list.icon=icons/BlackList.gif
 blank.icon=icons/Blank.gif
 bug.icon=icons/Bug.png
 chat.icon=icons/Chat.gif
+chat_pending.icon=icons/ChatPending.gif
 checked.icon=icons/Checked.gif
 computer.icon=icons/Computer.png
 connected_bright.icon=icons/ConnectBright.png
