Add pending messages button, refs #278

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -191,6 +191,10 @@ action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
+action_pending_messages.description=Show new messages received
+action_pending_messages.key=S
+action_pending_messages.name=Show messages
+
 action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=R
 action_reconnect.name=Reconnect
