--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -33,6 +33,7 @@ action_open_members_information.icon=icons/NodeFriendConnected.gif
 action_open_preferences.icon=icons/Preferences.png
 action_open_settings_information.icon=icons/Settings.png
 action_open_explorer.icon=icons/Directory.gif
+action_pending_messages.icon=icons/ChatPending.gif
 action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
 action_remove_directory.icon=icons/Delete.gif
