Now also works with running instance. Port configurable of remote command manager

--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -11,7 +11,8 @@ port=3457
 verbose=true
 disableui=true
 uploadlimit=0
-disablercon=false
+net.rcon=true
+net.rcon.port=3458
 disablebroadcasts=true
 networkingmode=LANONLYMODE
 mydyndns=localhost
